Malai kofta's page was added and index.html was updated to include a link to it.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body bgcolor="black" text="white">
     <h1>My favorite Recipes</h1>
 
-    <a href="palak_paneer.html">Palak Paneer</a></body>
+    <a href="palak_paneer.html">Palak Paneer</a>
+    <br>
+    <a href="malai_kofta.html">Malai Kofta</a>
+
+</body>
 </html>
